# bevy_simple_subsecond_system

./: Cargo.toml  readme.md
.cargo/: config_faster_builds.toml
.github/workflows/: ci.yml
examples/: add_systems.rs  component_migration.rs  minimal.rs  n_body_simulation.rs  observer.rs  on_event.rs  patch_on_update.rs  patch_signature.rs  rerun_setup.rs  ui.rs
examples/hotpatching_ui/: Cargo.toml
examples/hotpatching_ui/src/: main.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
examples/ui/: Cargo.toml
examples/ui/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: hot_patched_app.rs  lib.rs  main.rs  migration.rs
tests/: compile.rs  compile_change_signature copy.rs  compile_hot.rs  compile_rerun.rs
