[package]
name = "bevy_simple_subsecond_system_macros"
version = "0.1.6"
edition = "2024"
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
description = "Macros for bevy_simple_subsecond_system"
repository = "https://github.com/janhohenheim/bevy_simple_subsecond_system"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
